Name:                conduit
Version:             1.3.1.1
Synopsis:            Streaming data processing library.
description:
    `conduit` is a solution to the streaming data problem, allowing for production,
    transformation, and consumption of streams of data in constant memory. It is an
    alternative to lazy I\/O which guarantees deterministic resource handling.
    .
    For more information about conduit in general, and how this package in
    particular fits into the ecosystem, see [the conduit
    homepage](https://github.com/snoyberg/conduit#readme).
    .
    Hackage documentation generation is not reliable. For up to date documentation, please see: <http://www.stackage.org/package/conduit>.
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Data, Conduit
Build-type:          Simple
Cabal-version:       >=1.8
Homepage:            http://github.com/snoyberg/conduit
extra-source-files:  test/main.hs
                   , test/doctests.hs
                   , test/subdir/dummyfile.txt
                   , README.md
                   , ChangeLog.md
                   , fusion-macros.h

Library
  hs-source-dirs:      src
  Exposed-modules:     Data.Conduit
                       Data.Conduit.Combinators
                       Data.Conduit.List
                       Data.Conduit.Internal
                       Data.Conduit.Lift
                       Data.Conduit.Internal.Fusion
                       Data.Conduit.Internal.List.Stream
                       Data.Conduit.Combinators.Stream
                       Conduit
  other-modules:       Data.Conduit.Internal.Pipe
                       Data.Conduit.Internal.Conduit
                       Data.Conduit.Combinators.Unqualified
                       Data.Streaming.FileRead
  Build-depends:       base                     >= 4.9          && < 5
                     , resourcet                
                     , transformers             >= 0.4
                     , mtl
                     , primitive
                     , unliftio-core
                     , exceptions
                     , mono-traversable         >= 1.0.7
                     , vector
                     , bytestring
                     , text
                     , filepath
                     , directory

  ghc-options:         -Wall
  include-dirs:        .
